# py-multi-example

./: .gitignore  Makefile
apps/connectors_agent_component/: pyproject.toml
apps/connectors_agent_component/src/connectors_agent_component/: cli.py
apps/connectors_cli/: pyproject.toml
apps/connectors_cli/src/connectors_cli/: cli.py
apps/connectors_service/: pyproject.toml
apps/connectors_service/src/connectors_service/: cli.py
apps/just_a_script/: script.py
libraries/connectors/: pyproject.toml
libraries/connectors/test/: connectors_test.py
libraries/connectors_sdk/: Makefile  README.md  pyproject.toml
libraries/connectors_sdk/src/connectors_sdk/: __init__.py  base_connector.py  utils.py
libraries/connectors_sdk/src/connectors_sdk/helpers/: chatting.py
libraries/connectors_sdk/src/connectors_sdk/sink/: file.py
libraries/connectors_sdk/test/connectors/helpers/: chatting_test.py
libraries/elastic_connectors/: Makefile  README.md  pyproject.toml
libraries/elastic_connectors/src/elastic_connectors/: filesystem.py
libraries/external_contribution_connector/: pyproject.toml
libraries/external_contribution_connector/src/external_contribution_connector/: connector.py
