[project]
name = "connectors_agent_component"
version = "0.1.0"
description = "Connectors agent component in a nutshell"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "ruff>=0.6.1",
    "connectors"
]

[project.scripts]
connectors_agent_component = "connectors_agent_component.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
dev-mode-dirs = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/connectors_agent_component"]
sources = ["src"]
