[project]
name = "external_contribution_connector"
version = "0.1.0"
authors = [
  { name="Artem Shelkovnikov", email="artem.shelkovikov@elastic.co" },
]
description = "A connector that can live in a different git repository"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", # Elastic License here
    "Operating System :: OS Independent",
]
requires-python = ">=3.10,<3.12"
dependencies = [
    "connectors_sdk",
    "requests",
    "bs4"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.1",
    "pytest"
]

[project.urls]
Homepage = "https://github.com/elastic/connectors"
Issues = "https://github.com/elastic/connectors/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
dev-mode-dirs = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/external_contribution_connector"]
sources = ["src"]

